Add category handling

--- a/Resources/Private/Templates/WordpressMigrate/Index.html
+++ b/Resources/Private/Templates/WordpressMigrate/Index.html
@@ -21,6 +21,18 @@
             </label>
             <f:form.textfield class="form-control" id="newsPid" name="newsPid" required="required" />
         </div>
+        <div class="form-group">
+            <label for="categoryPid" id="categoryPidLabel">
+                <f:translate key="LLL:EXT:wordpress_migrate/Resources/Private/Language/Backend/locallang_mod.xlf:categoryPid"/>:
+            </label>
+            <f:form.textfield class="form-control" id="categoryPid" name="categoryPid" required="required" />
+        </div>
+        <div class="form-group">
+            <label for="tagPid" id="tagPidLabel">
+                <f:translate key="LLL:EXT:wordpress_migrate/Resources/Private/Language/Backend/locallang_mod.xlf:tagPid"/>:
+            </label>
+            <f:form.textfield class="form-control" id="tagPid" name="tagPid" required="required" />
+        </div>
         <f:form.button class="btn btn-success">
             <f:translate
                     key="LLL:EXT:wordpress_migrate/Resources/Private/Language/Backend/locallang_mod.xlf:submit"/>
